--- a/FirstExample/styles/style.css
+++ b/FirstExample/styles/style.css
@@ -3,3 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    margin: 20px;
+    font-family: Roboto, sans-serif;
+    font-size: 20px;
+}
+
+h1 {
+    font-size: 30px;
+}
+
+button {
+    font-size: 24px;
+}
